<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="40dp"
    android:paddingEnd="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.lapoderosa.app.normal.HomeActivity"
    android:paddingStart="40dp"
    android:paddingRight="40dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:foregroundGravity="center"
        android:padding="5dp"
        app:srcCompat="@drawable/splash"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btIngresar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/buttonFormat"
            android:background="@drawable/custom_bottom"
            android:gravity="center"
            android:text="@string/ingresar"/>

        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tvRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btIngresar"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/REGISTRARSE3"
            style="@style/home" />

        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tvReporteAnonimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegistrarse"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/reporte_anonimo"
            style="@style/home" />

        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tvContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReporteAnonimo"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/contacto"
            style="@style/home" />

        <TextView
            android:layout_marginBottom="10dp"
            android:textColor="#BCBBBB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/año"
            android:textSize="13sp" />
    </RelativeLayout>
</LinearLayout>