<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/rvEmail"
                android:padding="3dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_below="@+id/rvEmail"
                android:id="@+id/rvFullName"
                android:text="@string/nombre_completo"
                android:padding="3dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_below="@+id/rvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rvAsamblea"
                    android:padding="3dp"
                    android:text="@string/asamblea"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="Suspicious0dp">

                        <RadioButton
                            android:id="@+id/rvRadioButton1"
                            android:text="@string/aceptar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:ignore="NestedWeights" />
                        <RadioButton
                            android:id="@+id/rvRadioButton2"
                            android:text="@string/eliminar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>