<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRestablecer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textTitulo"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rEmail"
        android:gravity="center"
        android:text="@string/ingrese_email_y_la_nueva_contrasenia"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/rEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="48dp"
        android:layout_above="@+id/dmPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email_black_36dp"
        android:hint="@string/ingrese_email"
        tools:ignore="RtlHardcoded"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dmPassword1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/rPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/nueva_contrasenia"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dmPassword1"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/rPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dmPassword1"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/layout2Pass"
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/rBtSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_bottom"
            android:text="@string/guardar"
            style="@style/buttonFormat"/>

    </LinearLayout>


</RelativeLayout>