<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/rvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textStyle="bold"
                android:paddingRight="4sp"
                android:textSize="18sp"
                android:gravity="center"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <LinearLayout
                android:id="@+id/lyMovimiento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvUsuario"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rvFecha"
                    android:padding="3dp"
                    android:text="@string/fecha"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/rvQueHizo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:paddingRight="4dp"
                    android:hint="@string/que_hizo"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/lyMovimiento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rvHora"
                    android:padding="3dp"
                    android:text="@string/hora"
                    android:textSize="17sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/rvUsuarioInteraccion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:gravity="right"
                    android:paddingRight="4sp"
                    android:hint="@string/usuario_interactuado"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>