<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBusqueda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/aceptar_eliminar"
        android:padding="10dp"
        android:paddingRight="30dp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBuscar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/buttonFormat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_bottom"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/buttonFormat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_bottom"
            android:text="@string/cancelar" />
    </LinearLayout>
</RelativeLayout>